# ROS2_YOLOv8_RK3588_object_detect

./: LICENSE  README.md
yolov8_detect_rknn_pkg/: CMakeLists.txt  package.xml
yolov8_detect_rknn_pkg/model/: yolov8n.rknn
yolov8_detect_rknn_pkg/src/: img_detect_node.cpp  video_detect_node.cpp
